OO-9205: load only elements where the user is member, same for courses